--- a/www/contact.html
+++ b/www/contact.html
@@ -5,7 +5,7 @@
     <title>Professional Park Pediatrics - Home</title>
     
     <link rel="stylesheet" type="text/css" href="../styles/all.css" media="all">
-    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Chelsea+Market&display=swap" rel="stylesheet">
 </head>
 <body>
 <img src="../images/ppplogo.jpg" class="logo" alt="Logo">
