--- a/www/medical.html
+++ b/www/medical.html
@@ -5,7 +5,7 @@
     <title>Professional Park Pediatrics - Home</title>
     
     <link rel="stylesheet" type="text/css" href="../styles/all.css" media="all">
-    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Chelsea+Market&display=swap" rel="stylesheet">
 </head>
 <body>
 <img src="../images/ppplogo.jpg" class="logo" alt="Logo">    
@@ -18,7 +18,7 @@
             <li><a href="references.html">References</a></li>
         </ul>
     </nav>
-    <h1> About Us </h1>
+    <h1> Medical Info </h1>
     <h2> Newborns</h2>
     <p> Content Goes Here </p>
 
