--- a/www/about.html
+++ b/www/about.html
@@ -5,10 +5,10 @@
     <title>Professional Park Pediatrics - Home</title>
     
     <link rel="stylesheet" type="text/css" href="../styles/all.css" media="all">
-    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Chelsea+Market&display=swap" rel="stylesheet">
 </head>
 <body>
-<img src="../images/ppplogo.jpg" class="logo" alt="Logo">
+<img src="../images/ppplogo.jpg" class="logo" alt="Logo"></img>
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -18,8 +18,7 @@
             <li><a href="references.html">References</a></li>
         </ul>
     </nav>
-    <h1> About Us </h1>
-    <h2> Our History</h2>
+<h2> Our History</h2>
     <p> Our History Goes Here </p>
 
     <h2> Our Providers</h2>
