--- a/www/references.html
+++ b/www/references.html
@@ -5,7 +5,7 @@
     <title>Professional Park Pediatrics - Home</title>
     
     <link rel="stylesheet" type="text/css" href="../styles/all.css" media="all">
-    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Chelsea+Market&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -19,7 +19,6 @@
             <li><a href="references.html" class="active">References</a></li>
         </ul>
     </nav>
-    <h1> References </h1>
     <p> content goes here</p>
 
 </body>
