--- a/www/medical.html
+++ b/www/medical.html
@@ -77,7 +77,55 @@
     <p> Content Goes Here </p>
 
     <h2 id="dose">Dosage Charts</h2>
-    <p> Content Goes Here </p>
+    <h3> Acetaminophen (Tylenol) Dosage Chart </h3>
+    <p> *Give every four hours as needed but never more than 5 doses in 24 hours.
+    <div class="chart_box">
+        <div class="column">
+            <h4>Age</h4>
+            <span> 0 to 3 months</span>
+            <span> 4 to 11 months</span>
+            <span> 12 to 23 months</span>
+            <span> 2 to 3 years</span>
+            <span> 4 to 5 years</span>
+            <span> 6 to 8 years</span>
+            <span> 9 to 10 years</span>
+            <span> 11 years</span>
+        </div>
+        <div class="column">
+                <h4>Weight</h4>
+                <span> 6 to 11 lbs</span>
+                <span> 12 to 17 lbs</span>
+                <span> 18 to 23 lbs</span>
+                <span> 24 to 35 lbs</span>
+                <span> 36 to 47 lbs</span>
+                <span> 48 to 59 lbs</span>
+                <span> 60 to 71 lbs</span>
+                <span> 72 to 96 lbs</span>
+        </div>
+        <div class="column">
+                <h4>Dose (160 mg/5ml) </h4>
+                <span> 1/4 tsp (1.25 ml)</span>
+                <span> 1/2 tsp (2.5 ml)</span>
+                <span> 3/4 tsp (3.75 ml) </span>
+                <span> 1 tsp (5 ml)</span>
+                <span> 1 1/2 tsp (7.5 ml)</span>
+                <span> 2 tsp (10 ml)</span>
+                <span> 2 1/2 tsp (12.5 ml)</span>
+                <span> 3 tsp (15 ml)</span>
+        </div>
+        <div class="column">
+                <h4>Chewable Tablets</h4>
+                <span> N/A </span>
+                <span> N/A</span>
+                <span> N/A</span>
+                <span> 1 tablet</span>
+                <span> 1.5 tablets</span>
+                <span> 2 tablets</span>
+                <span> 2.5 tablets</span>
+                <span> 3 tablets</span>
+        </div>
 
+    </div>
+    
 </body>
 </html>
