--- a/references.html
+++ b/references.html
@@ -50,8 +50,9 @@
                         <a href="medical.html#well">Well Visits</a>
                         <a href="medical.html#imm">Immunizations</a>
                         <a href="medical.html#ill">Childhood Illnesses</a>
-                        <a href="medical.html#dose">Dosage Charts</a>
                         <a href="medical.html#hosp">Hospital Visits</a>
+                        <a href="medical.html#dose">Dosage Charts</a>
+                       
                 </div>
                 </div>
                 
@@ -59,7 +60,43 @@
                 <a href="references.html">References</a>
             </div>
         </div>
-    <p> content goes here</p>
+    <p> 
+    Take a look at the links below for further information. 
+    <br/>
+    <br/>
+    <a href="https://www.aaaai.org/">American Academy of Allergy, Asthma and Immunology</a>
+    <br/>
+    <br/>
+    <a href="http://www.aap.org/"> American Academy of Pediatrics</a>
+    <br/>
+    <br/>
+    <a href="http://wwwnc.cdc.gov/travel/destinations/list.htm">CDC Traveler's Health Guide</a>
+    <br/>
+    <br/>
+    <a href="http://www.healthychildren.org/"> HealthyChildren.org</a>
+    <br/>
+    <br/>
+    <a href="http://www.healthychildren.org/spanish"> HealthyChildren.org en Español</a>
+    <br/>
+    <br/>
+    <a href="http://www.immunize.org/vaccines">Immunize Action Coalition on Vaccines</a>
+    <br/>
+    <br/>
+    <a href="http://www.kidshealth.org/">KidsHealth.org</a>
+    <br/>
+    <br/>
+    <a href="http://www.llli.org/">La Leche League International on Breastfeeding</a>
+    <br/>
+    <br/>
+    <a href="http://www.choosemyplate.gov/"> Choose My Plate on Healthy Eating</a>
+    <br/>
+    <br/>
+    <a href="http://q-corp.org/compare-your-care"> Oregon Health Care Quality Corp: Compare Your Care</a>
+    <br/>
+    <br/>
+    <a href="http://www.safekids.org/">Safe Kids Worldwide on Child Safety</a>
+
+    </p>
 
 </body>
 </html>
