--- a/header.html
+++ b/header.html
@@ -26,6 +26,7 @@
                 <div class="dropdown">
                     <a href="about.html">About Us</a>
                     <div class="dropdown-content">
+                        
                         <a href="about.html#prov">Our Providers</a>
                         <a href="about.html#staff">Office Staff</a>
                     </div>
@@ -41,6 +42,7 @@
                         <a href="medical.html#dose">Dosage Charts</a>
                 </div>
                 </div>
+                <a href="guide.html">Patient Guide</a>
                 <a href="policy.html"> Policies</a>
                 <a href="forms.html">Forms</a>
                 <a href="contact.html">Contact Us</a>
