--- a/about.html
+++ b/about.html
@@ -24,7 +24,29 @@
 <body>
 <div id="header"></div>
 
-    <h2 id="prov"> Doctors </h2>
+    <h2 id="phil"> Our Philosophy </h2>
+    <p class="purpose"> <strong>Your children’s well-being is our main priority. </strong> Our board certified
+        doctors specialize in the care of children and adolescents. We are
+        prepared to take care of all your children&#39;s health needs: well-child
+        check-ups, illnesses and injuries. We are in a group practice to ensure
+        that help is available at all times to meet your children’s needs. 
+    </br>
+</br> 
+Besides having an on-call physician, our physicians continue to see newborns at
+the hospital. In our practice, each patient is assigned to a primary
+physician of their choice. We make every effort for your child to see
+their primary physician for their well-child visits. However, night and
+weekend coverage are handled on a rotating basis by our four
+physicians, and you will be cared for by the on-call physicians. This
+includes newborn care at the hospital as well as in-patient
+hospitalization on the pediatric floor of Tallahassee Memorial Hospital.
+
+</br> 
+</br> 
+We strongly believe in the continuity of care for our patients. Our aim is
+to provide truly comprehensive health care though young adulthood. </p>
+
+    <h2 id="prov"> Our Providers</h2>
     <div class="chart_wrap">
         <div class="sidebyside2">
     <img src="/images/jimed.jpg"></img>
@@ -32,22 +54,23 @@
 </div> <div class="sidebyside2">   
     <img src="/images/jimed.jpg"></img>
     <img src="/images/jimed.jpg"></img>
-</div>
+</div> <div class="sidebyside2">   
+    <img src="/images/jimed.jpg"></img>
+    <img src="/images/jimed.jpg"></img>
+</div> <div class="sidebyside2">   
+    <img src="/images/jimed.jpg"></img>
+    <img src="/images/jimed.jpg"></img>
+</div> <div class="sidebyside2">   
+    <img src="/images/jimed.jpg"></img>
+    </div>
     </div>
 
-    <h2 id="NPs"> Nurse Practitioners </h2>
-    <div class="chart_wrap">
-    <img src="/images/jimed.jpg"></img>
-    <img src="/images/jimed.jpg"></img>
-    <img src="/images/jimed.jpg"></img>
-    <img src="/images/jimed.jpg"></img>
-    <img src="/images/jimed.jpg"></img>
-    </div>
 
     <h2 id="staff"> Office Staff</h2>
     <div class="chart_wrap">
     <img src="/images/jimed.jpg"></img>
     <img src="/images/jimed.jpg"></img>
+</div> <div class="sidebyside2">   
     <img src="/images/jimed.jpg"></img>
     </div>
 </body>
