--- a/medical.html
+++ b/medical.html
@@ -62,7 +62,7 @@
 </div>
 
 <div class="chart_wrap2">
-    <h2> Common Childhood Illnesses </h2>
+    <h2 id="ill"> Common Childhood Illnesses </h2>
     <ul>
         <li>Fever</li>
         <p class="minim"><a href="https://www.healthychildren.org/English/health-issues/conditions/fever/Pages/default.aspx">Fever Info</a></p>
@@ -116,7 +116,7 @@
      -->
 
      <div class="chart_wrap2">
-     <h2> Developmental/Behavioral Topics </h2>
+     <h2 id="dev"> Developmental/Behavioral Topics </h2>
      <ul>
             <li>Learning Disabilities</li>
             <p class="minim"><a href="https://www.healthychildren.org/English/health-issues/conditions/learning-disabilities/Pages/default.aspx">Learning Disabilities Information</a></p>
