--- a/header.html
+++ b/header.html
@@ -21,12 +21,19 @@
             <div class="topnav" id="myTopnav">
                        
         <div class="innernav">
-                <a href="index.html">Home</a>
+                <div class="dropdown">
+                        <a href="index.html">Home</a>
+                        <div class="dropdown-content">
+                            <a href="index.html#phil">Our Philosophy</a>
+                            <a href="about.html#prov">Our Providers</a>
+                            <a href="about.html#staff">Office Staff</a>
+                        </div>
+                    </div>
                 <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
                 <div class="dropdown">
                     <a href="about.html">About Us</a>
                     <div class="dropdown-content">
-                        
+                        <a href="about.html#phil">Our Philosophy</a>
                         <a href="about.html#prov">Our Providers</a>
                         <a href="about.html#staff">Office Staff</a>
                     </div>
@@ -35,16 +42,12 @@
                     <a href="medical.html">Medical Info</a>
                     <div class="dropdown-content">
                         <a href="medical.html#newb">Newborns</a>
-                        <a href="medical.html#well">Well Visits</a>
+                        <a href="medical.html#ill">Common Childhood Illnesses</a>
+                        <a href="medical.html#dev">Behavioral Topics</a>
                         <a href="medical.html#imm">Immunizations</a>
-                        <a href="medical.html#ill">Childhood Illnesses</a>
-                        <a href="medical.html#hosp">Hospital Visits</a>
                         <a href="medical.html#dose">Dosage Charts</a>
                 </div>
                 </div>
-                <a href="guide.html">Patient Guide</a>
-                <a href="policy.html"> Policies</a>
-                <a href="forms.html">Forms</a>
                 <a href="contact.html">Contact Us</a>
                 <a href="references.html">Resources</a>
             </div>
