--- a/index.html
+++ b/index.html
@@ -23,26 +23,14 @@
 </head>
 <body>
 <div id="header"></div>
-    <p class="purpose"> <strong>Your children’s well-being is our main priority. </strong> Our board certified
-        doctors specialize in the care of children and adolescents. We are
-        prepared to take care of all your children&#39;s health needs: well-child
-        check-ups, illnesses and injuries. We are in a group practice to ensure
-        that help is available at all times to meet your children’s needs. 
-    </br> 
-</br> 
-Besides having an on-call physician, our physicians continue to see newborns at
-the hospital. In our practice, each patient is assigned to a primary
-physician of their choice. We make every effort for your child to see
-their primary physician for their well-child visits. However, night and
-weekend coverage are handled on a rotating basis by our four
-physicians, and you will be cared for by the on-call physicians. This
-includes newborn care at the hospital as well as in-patient
-hospitalization on the pediatric floor of Tallahassee Memorial Hospital.
 
-</br> 
-</br> 
-We strongly believe in the continuity of care for our patients. Our aim is
-to provide truly comprehensive health care though young adulthood. </p>
+<div class="sidebyside2">
+        <a href="/guide.html"><button id="guide"> Practice Guide</button></a>
+<a href="/forms.html"><button id="forms">Patient Forms</button></a>
 
+<a href="/policy.html"><button id="poli">Our Policies</button></a>
+
+
+</div>
 </body>
 </html>
