--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
 <div id="header"></div>
 
     <h2 id="phil"> Our Philosophy </h2>
-    <p class="purpose"> <strong>Your children’s well-being is our main priority. </strong> Our board certified
+    <p class="purpose">  Our board certified
         doctors specialize in the care of children and adolescents. We are
         prepared to take care of all your children&#39;s health needs: well-child
         check-ups, illnesses and injuries. We are in a group practice to ensure
