--- a/header.html
+++ b/header.html
@@ -21,14 +21,7 @@
             <div class="topnav" id="myTopnav">
                        
         <div class="innernav">
-                <div class="dropdown">
-                        <a href="index.html">Home</a>
-                        <div class="dropdown-content">
-                            <a href="index.html#phil">Our Philosophy</a>
-                            <a href="about.html#prov">Our Providers</a>
-                            <a href="about.html#staff">Office Staff</a>
-                        </div>
-                    </div>
+                        <a href="index.html">Home</a>  
                 <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
                 <div class="dropdown">
                     <a href="about.html">About Us</a>
@@ -48,7 +41,14 @@
                         <a href="medical.html#dose">Dosage Charts</a>
                 </div>
                 </div>
-                <a href="contact.html">Contact Us</a>
+                <div class="dropdown">
                 <a href="references.html">Resources</a>
+                <div class="dropdown-content">
+                <a href="references.html#forms">Forms</a>
+                <a href="references.html#guide">Patient Guide</a>
+                <a href="references.html#online">Online Resources</a>
+            </div>
+        </div>
+                <a href="contact.html">Contact Us</a>
             </div>
         </div>
