--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 <body>
 <div id="header"></div>
-
+<p class="purpose"> Welcome to Professional Park Pediatrics!</p>
 <div class="sidebyside2">
         <a href="/guide.html"><button id="guide"> Practice Guide</button></a>
 <a href="/forms.html"><button id="forms">Patient Forms</button></a>
