--- a/references.html
+++ b/references.html
@@ -23,8 +23,34 @@
 </head>
 <body>
 <div id="header"></div>
-    <p> 
-    Take a look at the links below for further information. 
+
+<h2 id="guide">Patient Guide</h2>
+
+<h2 id="forms">Forms</h2>
+<p>
+        <a href="/Consent_To_Treat.pdf" target="_blank">Consent To Treat</a>
+        <br/>
+        <br/>
+        <a href="/disclosure consent 7.18.pdf" target="_blank"> New Patient Consent Form </a>
+        <br/>
+        <br/>
+        <a href="/HIPAA.pdf" target="_blank"> HIPAA Form</a>
+        <br/>
+        <br/>
+        <a href="/Over 18 HIPAA.pdf" target="_blank">HIPPA Form for Patients Over 18</a>
+        <br/>
+        <br/>
+        <a href="/Pt Info, History, 7.18.pdf" target="_blank">Patient History Form</a>
+        <br/>
+        <br/>
+        <a href="/Medical Records Request Form 2014.pdf" target="_blank">Medical Records Request Form</a>
+        <br/>
+        <br/>
+        <a href="/Records Release to us 2014.pdf" target="_blank">Release Records From Previous Provider</a>
+    </p>
+    
+<h2 id="online"> External Online Resources </h2>
+<p>
     <br/>
     <br/>
     <a href="https://www.aaaai.org/">American Academy of Allergy, Asthma and Immunology</a>
