--- a/header.html
+++ b/header.html
@@ -44,8 +44,9 @@
                 <div class="dropdown">
                 <a href="references.html">Resources</a>
                 <div class="dropdown-content">
+                
+                <a href="references.html#guide">Practice Guide</a>
                 <a href="references.html#forms">Forms</a>
-                <a href="references.html#guide">Patient Guide</a>
                 <a href="references.html#online">Online Resources</a>
             </div>
         </div>
