--- a/medical.html
+++ b/medical.html
@@ -31,6 +31,8 @@
     <li> Back to Sleep </li>
     <p class="minim"><a href="https://www.healthychildren.org/English/ages-stages/baby/sleep/Pages/A-Parents-Guide-to-Safe-Sleep.aspx">Parent's Guide to Safe Sleep</a>
  </p>
+ <li>Weight Checks</li>
+    <p class="minim">Weight checks for newborns are done on a walk-in basis, and do not require appointments. Nurses are most available for weight check walk-ins from 9-10:30AM or 2-3:30PM. </p>
         <li> Jaundice in Newborns</li>
         <p class="minim"> <a href="https://www.healthychildren.org/English/ages-stages/baby/Pages/Jaundice.aspx">Jaundice FAQs</a></p>
         
@@ -65,7 +67,15 @@
     <h2 id="ill"> Common Childhood Illnesses </h2>
     <ul>
         <li>Fever</li>
-        <p class="minim"><a href="https://www.healthychildren.org/English/health-issues/conditions/fever/Pages/default.aspx">Fever Info</a></p>
+        <p class="minim">Fever is a common accompaniment to many illnesses. Very few fevers are harmful in and of themselves. Even with fevers over 106 degrees, long term ill-effects are unlikely. Fever, on the other hand, may limit the reproduction of viruses that cause many illnesses and thus actually shorten the length of time a child is ill. Fever tends to make one feel less energetic at a time when she or he really needs to decrease activity. And fever alerts one to the fact that one’s child is ill. In the case of small infants, as noted, this may be a valuable clue that leads you to seek care but in most cases fever is merely a sign that you need to observe your child for any usual behavior or changes in his general well-being. All in all fever should be viewed as a friend that keeps us vigilant for anything more serious. 
+
+        </p><p class="minim">
+               
+                The most commonly used medication for controlling fever is acetaminophen (e.g. Tylenol). When it is deemed appropriate to lower fever, the maximum dose of acetaminophen is 15 mg for every 2.2 pounds. Another easy rule of thumb is 80 mg per 12 pounds of body weight. It is better to slightly under-dose than overdose. The strength of each of the preparations is written on the boxes or bottles. Acetaminophen infant drops have 160 mg per 5 mL (the more concentrated infant drops of 80 mg per 0.8 mL have been discontinued). The children’s elixir has 160 mg in each teaspoon (or 5 mL) and the chewable tablets have 80 or 160 mg per tablet. If your child can’t or won’t take/keep down medicine by mouth, acetaminophen rectal suppositories are available (e.g. Feverall); the dosage is the same as the oral formulations. 
+                </p>
+                <p class="minim"><a href="https://www.healthychildren.org/English/health-issues/conditions/fever/Pages/default.aspx">More Fever Info</a></p>
+        <li>Antibiotics</li>
+        <p class="minim">A majority of illnesses that children concur are viral in nature, which means that in most cases they will resolve without any specific treatment. Antibiotics do not cure a cold. Antibiotics should be used only when indicated. All medications have potential side effects, some of which can even be life-threatening. Remember we are here to do the best for your child. We will always prescribe an antibiotic when indicated, and choose the one which in our judgment best fits the circumstances. In many cases, there are several antibiotics that we might choose, any of which will be effective. </p>
         <li>Allergies & Asthma</li>
         <p class="minim"><a href="https://www.healthychildren.org/English/health-issues/conditions/allergies-asthma/Pages/default.aspx">Allergy & Asthma Info</a></p>
         <li>Constipation</li>
