--- a/policy.html
+++ b/policy.html
@@ -58,3 +58,7 @@ For those individuals insured by other companies, we will assist you if necessar
         checkup but has an illness, please let the staff know when you check in 
         so we can have them wait in the non-well waiting room and thereby avoid exposing others.</p>
       
+        <h3>Neonatal Weight Checks</h3>
+        <p>Weight checks for newborns are done on a walk-in basis, and do not require appointments. Nurses are most available for weight check walk-ins from 9-10:30AM or 2-3:30PM. </p>
+        <h3>Prescription Refills</h3>
+        <p>Please call our office during regular hours if medication refills are needed. We need notice of 3 working days to provide ADHD medications requiring monthly refills.</p>
