--- a/references.html
+++ b/references.html
@@ -24,7 +24,7 @@
 <body>
 <div id="header"></div>
 
-<h2 id="guide">Patient Guide</h2>
+<h2 id="guide">Practice Guide</h2>
 
 <h2 id="forms">Forms</h2>
 <p>
