--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,10 @@
  Hours: Monday through Friday, 8:30am -5:00 pm. 
  <br/>
     <br/>
-    If you need to contact us during after hours or during weekends, call our number above to reach the on-call nurse. 
+    Weekday Phone Hours: Monday through Friday, 9:00am-1:00pm, and 2:00pm-5:00pm. 
+    <br/>
+    <br/>
+    After Hours:  If you need to contact us during after hours or during weekends, call our number above to reach the on-call nurse. 
 </p>
 </body>
 </html>
