--- a/header.html
+++ b/header.html
@@ -37,6 +37,7 @@
                         <a href="medical.html#newb">Newborns</a>
                         <a href="medical.html#ill">Common Childhood Illnesses</a>
                         <a href="medical.html#dev">Behavioral Topics</a>
+                        <a href="medical.html#safe">Keeping Children Safe</a>
                         <a href="medical.html#imm">Immunizations</a>
                         <a href="medical.html#dose">Dosage Charts</a>
                 </div>
