--- a/medical.html
+++ b/medical.html
@@ -72,7 +72,7 @@
         </p>
                 <p class="minim"><a href="https://www.healthychildren.org/English/health-issues/conditions/fever/Pages/default.aspx">More Fever Info</a></p>
         <li>Antibiotics</li>
-        <p class="minim">A majority of illnesses that children concur are viral in nature, which means that in most cases they will resolve without any specific treatment. Antibiotics do not cure a cold. Antibiotics should be used only when indicated. All medications have potential side effects, some of which can even be life-threatening. Remember we are here to do the best for your child. We will always prescribe an antibiotic when indicated, and choose the one which in our judgment best fits the circumstances. In many cases, there are several antibiotics that we might choose, any of which will be effective. </p>
+        <p class="minim">A majority of illnesses that children concur are viral in nature, which means that in most cases they will resolve without any specific treatment. Antibiotics do not cure a cold. Antibiotics should be used only when indicated. All medications have potential side effects, some of which can even be life-threatening. Remember we are here to do the best for your child. We will always prescribe an antibiotic when indicated, and choose the one which in our judgment best fits the circumstances.  </p>
         <li>Allergies & Asthma</li>
         <p class="minim"><a href="https://www.healthychildren.org/English/health-issues/conditions/allergies-asthma/Pages/default.aspx">Allergy & Asthma Info</a></p>
         <li>Constipation</li>
@@ -134,7 +134,10 @@
             <p class="minim"><a href="https://www.healthychildren.org/English/health-issues/conditions/emotional-problems/Pages/Anxiety-Disorders.aspx">Anxiety in Teens: What's Going On?</a></p>
             <li>Adolescent Depression</li>
             <p class="minim"><a href="https://www.healthychildren.org/English/health-issues/conditions/emotional-problems/Pages/Childhood-Depression-What-Parents-Can-Do-To-Help.aspx">What Parents Can Do To Help</a></p>
-    </ul>
+            <li>Autism Spectrum Disorder</li>
+            <p class="minim"><a href="https://www.healthychildren.org/English/health-issues/conditions/Autism/Pages/Autism-Spectrum-Disorder.aspx">Autism Spectrum Disorder</a>
+    
+        </ul>
 </div>
 
 <div class="chart_wrap2">
