--- a/policy.html
+++ b/policy.html
@@ -45,7 +45,7 @@ For those individuals insured by other companies, we will assist you if necessar
 
 <h3> WAITING ROOM </h3>
 <p> We have separate waiting rooms at our office, usually referred to as the
-        “Well” and “Sick” waiting rooms. This is to minimize exposure of children who
+        “Well” and “Sick” waiting rooms. This is to minimize exposure of infants and children who
         are in for weight checks or checkups to patients who might have potentially
         contagious illnesses. If you child is in for ANYTHING OTHER THAN A ROUTINE 
         CHECKUP, you will likely be asked to wait in the “sick” waiting room. Sometimes 
@@ -59,7 +59,5 @@ For those individuals insured by other companies, we will assist you if necessar
         so we can have them wait in the non-well waiting room and thereby avoid exposing others.</p>
       
         <h3>Vaccination Policy</h3>
-        <p>We strongly believe that vaccinating  children and adults is the most important measure to prevent serious illnesses and promote health.
-            We understand the concerns that you may have as parents and are willing to discuss the scientific data behind the safety of currently recommended vaccines.
-            We follow the CDC/AAP recommendation on immunization schedule .</p>
+        <p>We strongly believe that vaccinating children and adults is the most important measure to prevent serious illnesses and promote health. We understand the concerns that you may have as parents and are willing to answer your questions and  discuss the scientific data behind the safety of currently recommended vaccines. We follow the CDC/AAP recommendation on immunization schedule, and are happy to explain the rational behind it. We do not recommend alternative schedules. </p>
         
