--- a/references.html
+++ b/references.html
@@ -49,7 +49,20 @@
         <a href="/Records Release to us 2014.pdf" target="_blank">Release Records From Previous Provider</a>
     </p>
     
-<h2 id="online"> External Online Resources </h2>
+<h2 id="online">Local Online Resources</h2>
+<p>
+        <br/>
+        <br/>
+        
+       <a href= "FirstWordsProject.com">  FirstWordsProject.com</a>
+        <br/>
+        <br/>
+
+    <a href="https://www.211bigbend.org"> 211 Big Bend</a>
+        <br/>
+        <br/>
+</p>
+<h2> Other Online Resources </h2>
 <p>
     <br/>
     <br/>
@@ -57,9 +70,6 @@
     <br/>
     <br/>
     <a href="http://www.aap.org/"> American Academy of Pediatrics</a>
-    <br/>
-    <br/>
-    <a href="https://www.211bigbend.org"> 211 Big Bend</a>
     <br/>
     <br/>
     <a href="http://wwwnc.cdc.gov/travel/destinations/list.htm">CDC Traveler's Health Guide</a>
