--- a/index.html
+++ b/index.html
@@ -24,13 +24,15 @@
 <body>
 <div id="header"></div>
 <p class="purpose"> Welcome to Professional Park Pediatrics!</p>
-<div class="sidebyside2">
-        <a href="/guide.html"><button id="guide"> Practice Guide</button></a>
-<a href="/forms.html"><button id="forms">Patient Forms</button></a>
+<!-- <div class="sidebyside3"> -->
+<a href="/guide.html"><button id="guidebutt"> <img src="/book.png"></img><br/>Patient Guide</button></a>
+<a href="/forms.html"><button id="formbutt"> <img src="/clipboard.png"></img><br/>Patient Forms</button></a>
+<!-- </div>
+<div class="sidebyside2"> -->
+<a href="/policy.html"><button id="polibutt"> <img src="/contract.png"></img><br/>Our Policies</button></a>
+<a href="/medical.html"><button id="medbutt"> <img src="/cough.png"></img><br/>Medical Questions?</button></a>
 
-<a href="/policy.html"><button id="poli">Our Policies</button></a>
 
-
-</div>
+<!-- </div> -->
 </body>
 </html>
