--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@ We strongly believe in the continuity of care for our patients. Our aim is to pr
    <h2 id="prov">Doctors</h2>
    <!-- <div class="sidebyside2"> -->
        <div class="container">
-   <img src="/walt.jpg"></img> 
+   <img src="/Walt.jpg"></img> 
         
    <p class="bio"><strong>Walter Bunnell III, MD </strong>grew up in St. Augustine, Florida.  He attended University of Florida medical school in Gainesville, Florida, and completed his Pediatric residency at University of Florida Health Shands Hospital.  After residency, he served as Chief Resident and Assistant Professor at Shands before moving to Tallahassee and joining Timberlane Pediatrics, P.A., where he practiced general pediatrics from 1982 until 1999.  In 1999, he formed Professional Park Pediatrics, P.A.   
 
@@ -52,13 +52,13 @@ We strongly believe in the continuity of care for our patients. Our aim is to pr
     
     Outside work he enjoys gardening, baking bread, traveling and attending Gator football games. </p>
 </div><div class="container">
-    <img src="/john.jpg"></img>
+    <img src="/John.jpg"></img>
 <p class="bio"><strong>John Elzie MD</strong> grew up in north Florida and graduated from Leon High School in Tallahassee.  He attended medical school at the University of South Florida and completed his pediatric residency in Gainesville at the University of Florida.  He moved back to Tallahassee in 2001 with his wife and three children to join Professional Park Pediatrics.  He enjoys practicing pediatrics with special emphasis on preventive care and continuity of care.  Outside work he enjoys hiking, kayaking, and scuba diving in Florida and outside the US when he gets a chance.</p>
 </div>
 <!-- </div></div><div class="sidebyside2"> -->
 
         <div class="container">
-        <img src="/james.jpg"></img> 
+        <img src="/James.jpg"></img> 
         <p class="bio"><strong>James E. Martin MD </strong>received his undergraduate degree from Vanderbilt University and completed
             medical school and residency for Internal Medicine/Pediatrics (Med/Peds) at the University of
             Tennessee, Memphis. He has practiced in Tallahassee for over 20 years; since 2002 he has singly
