--- a/index.html
+++ b/index.html
@@ -24,15 +24,20 @@
 <body>
 <div id="header"></div>
 <p class="purpose"> Welcome to Professional Park Pediatrics!</p>
-<!-- <div class="sidebyside3"> -->
-<a href="/guide.html"><button id="guidebutt"> <img src="/book.png"></img><br/>Patient Guide</button></a>
-<a href="/forms.html"><button id="formbutt"> <img src="/clipboard.png"></img><br/>Patient Forms</button></a>
-<!-- </div>
-<div class="sidebyside2"> -->
-<a href="/policy.html"><button id="polibutt"> <img src="/contract.png"></img><br/>Our Policies</button></a>
-<a href="/medical.html"><button id="medbutt"> <img src="/cough.png"></img><br/>Medical Questions?</button></a>
 
-
-<!-- </div> -->
+<div class="button_holder">
+<a href="/guide.html"><button> <img src="/book.png"></img><br/>Patient Guide</button></a>
+<a href="/forms.html"><button> <img src="/clipboard.png"></img><br/>Patient Forms</button></a>
+<a href="/policy.html"><button> <img src="/contract.png"></img><br/>Our Policies</button></a>
+<a href="/illnesses.html"><button> <img src="/cough.png"></img><br/>Common Illnesses</button></a>
+<a href="/behavioral.html"><button><img src="/depression.png"></img><br/>Behavior & Development</button></a>
+</div>
+<div class="button_holder2">
+<a href="immunization.html"><button><img src="/injection.png"></img><br/>Immunization Info</button></a>
+<a href="newborns.html"><button><img src="/child.png"></img><br/>Newborn Health</button></a>
+<a href="safety.html"><button><img src="/baby-car-seat.png"></img><br/>Children's Safety</button></a>
+<a href="dosage.html"><button><img src="/drug.png"></img><br/>Dosage Charts</button></a>
+<a href="online.html"><button><img src="/monitor.png"></img><br/>Online Resources</button></a>
+</div>
 </body>
 </html>
