--- a/references.html
+++ b/references.html
@@ -24,81 +24,13 @@
 <body>
 <div id="header"></div>
 
-<h2 id="guide">Practice Guide</h2>
+<a href="behavioral.html">Behavior and Development</a>
+<a href="immunization.html">Immunization Info</a>
+<a href="newborns.html">Newborn Health</a>
+<a href="safety.html">Children's Safety</a>
+<a href="dosage.html">Dosage Charts</a>
+<a href="online.html">Online Resources</a>
 
-<h2 id="forms">Forms</h2>
-<p>
-        <a href="/Consent_To_Treat.pdf" target="_blank">Consent To Treat</a>
-        <br/>
-        <br/>
-        <a href="/disclosure consent 7.18.pdf" target="_blank"> New Patient Consent Form </a>
-        <br/>
-        <br/>
-        <a href="/HIPAA.pdf" target="_blank"> HIPAA Form</a>
-        <br/>
-        <br/>
-        <a href="/Over 18 HIPAA.pdf" target="_blank">HIPPA Form for Patients Over 18</a>
-        <br/>
-        <br/>
-        <a href="/Pt Info, History, 7.18.pdf" target="_blank">Patient History Form</a>
-        <br/>
-        <br/>
-        <a href="/Medical Records Request Form 2014.pdf" target="_blank">Medical Records Request Form</a>
-        <br/>
-        <br/>
-        <a href="/Records Release to us 2014.pdf" target="_blank">Release Records From Previous Provider</a>
-    </p>
-    
-<h2 id="online">Local Online Resources</h2>
-<p>
-        <br/>
-        <br/>
-        
-       <a href= "FirstWordsProject.com">  FirstWordsProject.com</a>
-        <br/>
-        <br/>
-
-    <a href="https://www.211bigbend.org"> 211 Big Bend</a>
-        <br/>
-        <br/>
-</p>
-<h2> Other Online Resources </h2>
-<p>
-    <br/>
-    <br/>
-    <a href="https://www.aaaai.org/">American Academy of Allergy, Asthma and Immunology</a>
-    <br/>
-    <br/>
-    <a href="http://www.aap.org/"> American Academy of Pediatrics</a>
-    <br/>
-    <br/>
-    <a href="http://wwwnc.cdc.gov/travel/destinations/list.htm">CDC Traveler's Health Guide</a>
-    <br/>
-    <br/>
-    <a href="http://www.healthychildren.org/"> HealthyChildren.org</a>
-    <br/>
-    <br/>
-    <a href="http://www.healthychildren.org/spanish"> HealthyChildren.org en Español</a>
-    <br/>
-    <br/>
-    <a href="http://www.immunize.org/vaccines">Immunize Action Coalition on Vaccines</a>
-    <br/>
-    <br/>
-    <a href="http://www.kidshealth.org/">KidsHealth.org</a>
-    <br/>
-    <br/>
-    <a href="http://www.llli.org/">La Leche League International on Breastfeeding</a>
-    <br/>
-    <br/>
-    <a href="http://www.choosemyplate.gov/"> Choose My Plate on Healthy Eating</a>
-    <br/>
-    <br/>
-    <a href="http://q-corp.org/compare-your-care"> Oregon Health Care Quality Corp: Compare Your Care</a>
-    <br/>
-    <br/>
-    <a href="http://www.safekids.org/">Safe Kids Worldwide on Child Safety</a>
-
-    </p>
 
 </body>
 </html>
