fix cursor, fix behavioral

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <a href="/forms.html"><button> <img src="/clipboard.png"></img><br/>Patient Forms</button></a>
 <a href="/policy.html"><button> <img src="/contract.png"></img><br/>Our Policies</button></a>
 <a href="/illnesses.html"><button> <img src="/cough.png"></img><br/>Common Illnesses</button></a>
-<a href="/behavioral.html"><button><img src="/depression.png"></img><br/>Behavior & Development</button></a>
+<a href="/behavioral.html"><button><img src="/depression.png"></img><br/>Behavioral Health</button></a>
 </div>
 <div class="button_holder2">
 <a href="immunization.html"><button><img src="/injection.png"></img><br/>Immunization Info</button></a>
