--- a/about.html
+++ b/about.html
@@ -64,7 +64,10 @@ We strongly believe in the continuity of care for our patients. Our aim is to pr
                     
                     <div class="container">
                         <img src="/Nectar.jpg"></img>
-                        <p class="bio"><strong>Nectar Aintablian MD</strong> grew up in Lebanon and attended American University of Beirut for Medical school. After  her residency in Pediatrics at Buffalo Children’s Hospital she served as chief resident there. She   then completed a  fellowship in Pediatric Infectious Diseases  at UC San Diego. She joined PPP in 2014. Her particular emphasis is preventing and treating infectious diseases in children. 
+                        <p class="bio"><strong>Nectar Aintablian MD</strong> grew up in Lebanon and attended American University of Beirut for Medical school. After her residency in Pediatrics at Buffalo Children’s Hospital she served as chief resident there. 
+                            She then completed a fellowship in Pediatric Infectious Diseases  at UC San Diego. 
+                            She joined PPP in 2014. Her particular emphasis is preventing and treating infectious diseases in children. 
+                            Outside of work, she enjoys reading, cooking and painting. 
                         </p>
                     </div>
                 </div>
