--- a/header.html
+++ b/header.html
@@ -22,8 +22,10 @@
             <div class="topnav" id="myTopnav">
                        
         <div class="innernav">
-                        <a href="index.html">Home</a>  
+        <a href="index.html">Home</a>  
+
                 <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+
                 <div class="dropdown">
                     <a href="about.html">About Us</a>
                     <div class="dropdown-content">
@@ -33,6 +35,18 @@
                     </div>
                 </div>
                 </div>
-                <a href="contact.html">Contact Us</a>
+                <div class="dropdown">
+                <a href="medical.html">Patient Resources</a>
+                <div class="dropdown-content">
+                    <a href="newborns.html">Newborns</a>
+                    <a href="illnesses.html">Common Illnesses</a>
+                    <a href="behavioral.html">Behavioral Health</a>
+                    <a href="safety.html">Safety</a>
+                    <a href="dosage.html">Dosage Charts</a>
+                    <a href="online.html">Online Resources</a>
+                </div>
+            </div>
+
+            <a href="contact.html">Contact Us</a>
             </div>
         </div>
