--- a/policy.html
+++ b/policy.html
@@ -33,9 +33,12 @@
 
 <h3> INSURANCE </h3>
 
-<p>We file insurance forms for those insured by Capital Health Plan, Blue Cross/Blue Shield, United Health, Aetna, Tricare. We accept Medicaid HMOs incuding Wellcare, Humana, Sunshine and Lighthouse. 
-        
-For those individuals insured by other companies, we will assist you if necessary. Our staff will complete insurance forms for hospitalizations regardless of your insurer if you will obtain the appropriate forms. For those individuals filing their own insurance forms you will receive a copy of the “super bill” to be used for this purpose. The original of the “super bill” should be kept for income tax purposes. There is a charge if we have to take the time to duplicate this information. 
+<p>
+    At Professional Park Pediatrics, we file insurance forms for Capital Health Plan, Blue Cross/Blue Shield (PPO), United Health,  First Health Network (Contact our office for information), and Tricare Select (Contact our office for information).  We accept Medicaid HMOs incuding Wellcare, Humana, Sunshine and Lighthouse. Within the Healthy Kids program,  we only accept Aetna Better Health.
+   
+   Please make sure your child(ren) are added on to your insurance plan and assigned to your pediatrician of choice at Professional Park Pediatrics.
+   
+   For those insured by other companies, we will assist you if necessary. Our staff will complete insurance forms for hospitalizations regardless of your insurer if you will obtain the appropriate forms. For those individuals filing their own insurance forms you will receive a copy of the “super bill” to be used for this purpose. The original of the “super bill” should be kept for income tax purposes. There is a charge if we have to take the time to duplicate this information.
 </p>
 
 <h3> MEDICAL RECORDS</h3>
