--- a/header.html
+++ b/header.html
@@ -12,7 +12,7 @@
             
 
             <div class="sidebyside">
-                <img src="../images/ppplogo.jpg" class="logo" alt="Logo">
+                <img src="/images/ppplogo.jpg" class="logo" alt="Logo">
                 <div class="stack">
                     <div class="title"> Professional Park Pediatrics </div>
                     <div class="title2"> 1881 Professional Park Circle, Suite 80, Tallahassee, FL 32308 </div>
