--- a/index.html
+++ b/index.html
@@ -25,10 +25,12 @@
 <div id="header"></div>
 <p class="purpose"> Welcome to Professional Park Pediatrics!</p>
 
+<p class="purpose"> Click <a href="/covid.html">here</a> for our most recent COVID updates. </p>
+
 <div class="button_holder3">
-<a href="/guide.html"><button> <img src="/book.png"></img><br/>Practice Guide</button></a>
-<a href="/forms.html"><button> <img src="/clipboard.png"></img><br/>Forms</button></a>
-<a href="/policy.html"><button> <img src="/contract.png"></img><br/>Policies</button></a>
+<a href="/guide.html"><button> <img src="/images/book.png"></img><br/>Practice Guide</button></a>
+<a href="/forms.html"><button> <img src="/images/clipboard.png"></img><br/>Forms</button></a>
+<a href="/policy.html"><button> <img src="/images/contract.png"></img><br/>Policies</button></a>
 
 </div>
 
