--- a/forms.html
+++ b/forms.html
@@ -25,25 +25,28 @@
 <div id="header"></div>
     <h2> Patient Forms</h2>
     <p>
-        <a href="/Consent_To_Treat.pdf" target="_blank">Consent To Treat</a>
+        <a href="/pdfs/Consent_To_Treat.pdf" target="_blank">Consent To Treat</a>
         <br/>
         <br/>
-        <a href="/disclosure consent 7.18.pdf" target="_blank"> New Patient Consent Form </a>
+        <a href="/pdfs/disclosure consent 7.18.pdf" target="_blank"> New Patient Consent Form </a>
         <br/>
         <br/>
-        <a href="/HIPAA.pdf" target="_blank"> HIPAA Form</a>
+        <a href="/pdfs/HIPAA.pdf" target="_blank"> HIPAA Form</a>
         <br/>
         <br/>
-        <a href="/Over 18 HIPAA.pdf" target="_blank">HIPPA Form for Patients Over 18</a>
+        <a href="/pdfs/Over 18 HIPAA.pdf" target="_blank">HIPPA Form for Patients Over 18</a>
         <br/>
         <br/>
-        <a href="/Pt Info, History, 7.18.pdf" target="_blank">Patient History Form</a>
+        <a href="/pdfs/Pt Info, History, 7.18.pdf" target="_blank">Patient History Form</a>
         <br/>
         <br/>
-        <a href="/Medical Records Request Form 2014.pdf" target="_blank">Medical Records Request Form</a>
+        <a href="/pdfs/Medical Records Request Form 2014.pdf" target="_blank">Medical Records Request Form</a>
         <br/>
         <br/>
-        <a href="/Records Release to us 2014.pdf" target="_blank">Release Records From Previous Provider</a>
+        <a href="/pdfs/Records Release to us 2014.pdf" target="_blank">Release Records From Previous Provider</a>
+        <br/>
+        <br/>
+        <a href="/pdfs/WebPage.pdf" target="_blank">Release Records From Previous Provider</a>
     </p>
     
 </body>
