--- a/guide.html
+++ b/guide.html
@@ -24,7 +24,6 @@
 <div id="header"></div>
 <body>
 
-
 <h2>Practice Guide</h2> 
 
 <h3>Appointments</h3>
@@ -95,7 +94,7 @@ If you think your child needs to be seen, please call early in the day to allow 
     <p> There are multiple well-child visits during the first two years of life. We start with an initial newborn visit, followed by 1, 2, 4, 6, 9, and 12 month visits in the first year. In the second year, we have 15, 18, and 24 month visits. You can expect yearly visits afterwards. Many of the early well visits will have immunizations included. 
         <br/>
         <br/>
-        Check out the handout linked <a href="/well_child.pdf" target="_blank">here</a> for more information on what you should expect from well-child visits. </p>
+        Check out the handout linked <a href="/pdfs/well_child.pdf" target="_blank">here</a> for more information on what you should expect from well-child visits. </p>
     <li>Weight Checks</li>
         <p class="minim">Weight checks for infants and children are done on a walk-in basis, and do not require appointments. Nurses are most available for weight check walk-ins from 9-10:30AM or 2-3:30PM. </p>
         <li>Sick Patients</li> 
